CONFIG_ZMK_SPLIT_PERIPHERAL_HID_INDICATORS = y

--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -6,3 +6,4 @@ CONFIG_BT_BUF_ACL_TX_COUNT=32
 CONFIG_BT_L2CAP_TX_BUF_COUNT=32
 
 CONFIG_ZMK_HID_INDICATORS = y
+CONFIG_ZMK_SPLIT_PERIPHERAL_HID_INDICATORS = y
