--- a/config/boards/shields/charybdis/charybdis.dtsi
+++ b/config/boards/shields/charybdis/charybdis.dtsi
@@ -25,10 +25,10 @@
 
         diode-direction = "row2col";
 		row-gpios
-			= <&pro_micro 18 GPIO_ACTIVE_HIGH| GPIO_PULL_DOWN>
-			, <&pro_micro 5  GPIO_ACTIVE_HIGH| GPIO_PULL_DOWN>
-			, <&pro_micro 4  GPIO_ACTIVE_HIGH| GPIO_PULL_DOWN>
-			, <&pro_micro 9  GPIO_ACTIVE_HIGH| GPIO_PULL_DOWN>
+            = <&gpio1 15 (GPIO_ACTIVE_HIGH)> // Row 2 from the schematic file of charybdis
+            , <&gpio0 24 (GPIO_ACTIVE_HIGH)> // Row 3 from the schematic file of charybdis
+            , <&gpio0 22 (GPIO_ACTIVE_HIGH)> // Row 4 from the schematic file of charybdis
+            , <&gpio1 6  (GPIO_ACTIVE_HIGH)> // Row 5 from the schematic file of charybdis
             ;
     };
 
