--- a/config/boards/shields/charybdis/charybdis.dtsi
+++ b/config/boards/shields/charybdis/charybdis.dtsi
@@ -23,7 +23,7 @@
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
 
-        diode-direction = "row2col";
+        diode-direction = "col2row";
 		row-gpios
             = <&gpio1 15 (GPIO_ACTIVE_HIGH)> // Row 2 from the schematic file of charybdis
             , <&gpio0 24 (GPIO_ACTIVE_HIGH)> // Row 3 from the schematic file of charybdis
