--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -5,3 +5,6 @@ CONFIG_BT_PERIPHERAL_PREF_LATENCY=16
 CONFIG_BT_BUF_ACL_TX_COUNT=32
 CONFIG_BT_L2CAP_TX_BUF_COUNT=32
 
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
