--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -6,5 +6,7 @@ CONFIG_BT_BUF_ACL_TX_COUNT=32
 CONFIG_BT_L2CAP_TX_BUF_COUNT=32
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
-# Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=165
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
